syntax = "proto3";
package hh;

option go_package = "github.com/taaraora/hh-stub/pkg/hh";

enum bug {
  open = 0;
  closed = 1;
}

message empty {

}

service sessionForwarder {
  rpc reportSessionsStats(reportSessionsStatsRequest) returns (empty) {}
}

message reportSessionsStatsRequest {
  repeated sessionStats session_stats = 1;
}

message sessionStats {
  string sid = 1;
  repeated sessionStatsUsage usage = 2;
  string imsi = 3;
  string imei = 4;
  string msisdn = 5;
  string plmn_id = 6;
  string pgw_plmn_id = 7;
  string apnni = 8;
  string pdp_type = 9;
  string ue_ip = 10;
  string sgw_ip = 11;
  string pgw_ip = 12;
  string ue_ipv6 = 13;
  string sgw_ipv6 = 14;
  string pgw_ipv6 = 15;
  uint32 rat_type = 16;
  int64 session_start_time = 17;
  bool final_record = 18;
  uint64 local_sequence_number = 19;
  uint64 record_opening_time = 20;
  int64 record_duration = 21;
  uint32 cause_for_record_closing = 22;
  uint32 record_type = 23;
  uint32 charging_id = 24;
  bytes raw_user_location_info = 25;
  string ue_timezone = 26;
}

message sessionStatsUsage {
  string rule_id = 1;
  uint64 bytes_tx = 2;
  uint64 bytes_rx = 3;
  uint64 dropped_tx = 4;
  uint64 dropped_rx = 5;
}
